@@ -16,9 +16,8 @@
  *  along with GRUB.  If not, see <http://www.gnu.org/licenses/>.
  */
 
-#include <grub/machine/init.h>
-#include <grub/machine/int.h>
 #include <grub/machine/memory.h>
+#include <grub/machine/int.h>
 #include <grub/err.h>
 #include <grub/types.h>
 #include <grub/misc.h>
